resources/admissionregistration.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validiprangedelegation.openpaas.com
webhooks:
- name: validiprangedelegation.openpaas.com
  clientConfig:
    service:
      namespace: openpaas-ip-controller
      name: controller
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVERENDQXZRQ0NRQ3BpVWR4ejZ4MkZUQU5CZ2txaGtpRzl3MEJBUTBGQURDQnh6RUxNQWtHQTFVRUJoTUMKUkVVeEVEQU9CZ05WQkFnTUIwTnZiRzluYm1VeEVEQU9CZ05WQkFjTUIwTnZiRzluYm1VeER6QU5CZ05WQkJFTQpCalF5TkRJME1qRVVNQklHQTFVRUNRd0xTR0ZzYkc4Z0lERTJNakV4RXpBUkJnTlZCQW9NQ21kcFlXNTBjM2RoCmNtMHhHVEFYQmdOVkJBc01FRVZ0YjJwNUlFUmxjR0Z5ZEcxbGJuUXhGakFVQmdOVkJBTU1EV2RwWVc1MGMzZGgKY20wdWFXOHhKVEFqQmdrcWhraUc5dzBCQ1FFV0ZtNXZMWEpsY0d4NVFHZHBZVzUwYzNkaGNtMHVhVzh3SGhjTgpNakF3TVRJNE1qR [...]
  rules:
  - operations:
    - CREATE
    - UPDATE
    apiGroups:
    - "openpaas.com"
    apiVersions:
    - "v1"
    resources:
    - iprangedelegations
  failurePolicy: Fail
